--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body.blog{
-    background-color: #2f2f2f;
+
+    background-image: url("https://img.freepik.com/vettori-premium/sfondo-nero-griglia-metallica-scura_3442-369.jpg");
+    background-color: rgba(0, 0, 0, 0.7);
+    background-blend-mode: darken;
     margin: 0;
     padding: 0;
     font-family: "Libre Baskerville", serif;
@@ -7,13 +10,13 @@ body.blog{
 }   
 
 header{
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(255, 255, 255, 0.95);
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 90px;
     width: 100%;
-    font-family: "Libre Baskerville", serif;
+    font-family: "Verdana", "Geneva", "Tahoma", "sans-serif";
     position: sticky;
     top: 0;
 }
@@ -34,8 +37,12 @@ header span a{
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
-    color: white;
-    font-family: "Libre Baskerville", serif;
+    color: rgb(0, 0, 0);
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    transition: 0.3s;
+
     
 }
 header span a:hover{
@@ -92,7 +99,7 @@ article{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-direction:row;
+    flex-direction: column;
     float:inline-start;
     flex-wrap: nowrap;
     width: 100%;
